be: api blood donation doctor, get by healthcheckId
